--- a/style.css
+++ b/style.css
@@ -134,9 +134,210 @@ header nav ul li{
 }
 
 .shopping-bag .total-items-in-cart{
-    background-color: yellow;
     margin-left: 10px;
     padding: 5px;
     background-color: var(--color-20);
     border-radius: 5px;
+}
+
+/* products list */
+
+.products-list{
+    width: 100vw;
+    height: 100vh;
+    padding-top: 100px;
+    display: flex;
+    
+}
+.products img{
+    width: 200px;
+}
+
+.products .item{
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    
+}
+
+.products .item .item-container {
+    width: 250px;
+    height: 90%;
+    background-color: var(--link-color);
+    border-radius: 25px;
+    position: relative;
+    
+}
+
+.products .item .item-container .item-img{
+    
+    width: 100%;
+    height: 60%;
+    
+    background-color: white;
+    
+    border: 1px solid --link-color;
+    border-radius: 25px 25px 0 0 ;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.products .item .item-container .desc {
+    /* background-color: yellow; */
+    width: 100%;
+    color: #fff;
+    padding: 10px;
+
+}
+
+.products .item .item-container .add-to-cart{
+
+    background-color: var(--color-20);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    position: absolute;
+    top: 10px;
+    right: 10px;
+
+    padding: 5px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.products .add-to-wishlist {
+    /* background-color: yellow; */
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    position: absolute;
+    top: 10px;
+    right: 60px;
+
+    padding: 5px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.products .add-to-cart img{
+    width: 32px;
+    height: 32px;
+}
+
+.products .add-to-wishlist img{
+    width: 32px;
+    height: 32px;
+    padding: 5px;
+}
+
+/* js13 cart */
+
+.cart{
+    height: 100%;
+    width: 25%;
+    
+    position: relative;
+}
+
+/* cart header */
+
+.cart-header{
+    display: flex;
+    justify-content: space-around;
+    padding: 10px 0;
+    
+}
+
+.cart-items{
+    
+    max-height: calc(100vh-247px);
+    overflow-y: auto;
+    overflow-x: hidden;
+    
+}
+
+.cart-item{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/*  */
+
+.cart-item .item-info{
+    background-color: var(--color-80-dark);
+    flex: 1;
+    border-radius: 0 10px 10px 0;
+    padding: 10px;
+}
+.cart-item .item-info:hover{
+    background-color: var(--color-20);
+    cursor: pointer;
+}
+.cart-item .item-info img{
+    width: 75px;
+}
+
+.cart-item .unit-price{
+    flex: 1;
+}
+
+.cart-item .units{
+    flex: 1;
+}
+
+.units .number{
+    margin: 0 10px;
+    font-size: 1.2rem;
+    
+}
+
+.units .btn{
+    
+    width: 20px;
+    height: 20px;
+    
+    background-color: var(--color-20);
+    border-radius: 50%;
+    
+    font-weight: bold;
+    
+    cursor: pointer;
+    
+    user-select: none;
+    
+    
+    -webkit-user-select: none; /* Chrome all / Safari all */
+    -moz-user-select: none; /* Firefox all */
+    -ms-user-select: none; /* IE 10+ */
+}
+
+.cart-footer{
+    width: 100%;
+    
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    
+    border-left:  1px solid --right-side-bg-color;
+}
+
+.cart-footer div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    padding: 15px 0;
+    background-color: yellow;
 }
