--- a/style.css
+++ b/style.css
@@ -348,5 +348,5 @@ header nav ul li{
     justify-content: center;
 
     padding: 15px 0;
-    background-color: yellow;
+    background-color: lightgrey;
 }
