--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ header nav ul li{
 .products .item .item-container {
     width: 250px;
     height: 90%;
-    background-color: var(--link-color);
+    background-color: var(--color-10);
     border-radius: 25px;
     position: relative;
     
